mobile attempt to fix landing section alignment of text

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -136,6 +136,7 @@ nav.main-nav > ul > li > a:hover {
   position: relative;
   left: -25px;
   letter-spacing: 1px;
+  text-align: center;
 }
 
 .L-text > h2 {
@@ -145,7 +146,7 @@ nav.main-nav > ul > li > a:hover {
 
 .L-text > p {
   font-style: italic;
-  text-align: right;
+  text-align: center;
   font-size: 16px;
   color: #EED6C8;
 }
@@ -287,22 +288,22 @@ figcaption > a:hover {
   text-decoration: overline;
 }
 
-@media only screen and (max-width: 388px) {
+@media only screen and (max-width: 480px) {
   body {
     overflow-x: hidden;
   }
-  .introduction > h1, h2, p {
+  .L-text > h1, h2, p {
     text-align: center;
   }
 }
 
 
 /* tablet styles */
-@media only screen and (min-width: 389px) and (max-width: 960px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
   body {
     overflow-x: hidden;
   }
-  .introduction > h1, h2, p {
+  .L-text > h1, h2, p {
     text-align: center;
   }
 
@@ -367,11 +368,11 @@ figcaption > a:hover {
   .L-text > h2 {
     margin-top: 0;
     font-size: 2.6em;
-    text-align: left;
+    text-align: center;
   }
 
   .L-text > p {
-    text-align: left;
+    text-align: center;
   }
 
   .R-img {
